# pytemplate

./: .pre-commit-config.yaml  .python-version  pyproject.toml
.github/workflows/: ci-cd.yml
tests/: test_sample.py
