[tool.poetry]
name = "pytemplate"
version = "0.1.0"
description = ""
authors = ["gorira <tatsuhiko.shigoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
